2009-05-13  Andreas Kurth <andreas.kurth@1und1.de>

	Made junit "fork" attribute configurable via property "test.junit.fork".

2009-05-08  Martin Leidig  <mleidig@schlund.de>

	Don't copy through action attributes at input elements. This fixes the
	following problem in Opera: Actions didn't work in Opera because it uses 
	the action attribute from the submit button as form action.

2009-05-07  Martin Leidig  <mleidig@schlund.de>

	Added 'properties' target to dependencies of 'buildtime-props' target 
	to ensure that the 'buildtime.prop' file always gets the right property
	values, regardless from where it is called.

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed NPE when unconfigured page is called with action parameter.

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed timer problem in SessionCleaner (reset timer after it was
	cancelled due to exception or error thrown by task or JVM).

2009-05-04  Martin Leidig  <mleidig@schlund.de>

	Fixed JMX bean naming in war-mode (use project name from project.xml
	instead of name derived from URI to project.xml to register JMX
	beans).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed problem in TargetGenerator occurring when modtime-check is
	disabled, but targets aren't pre-built (URI problem when trying to
	load module resources from file system).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed submit action bug (ignore unknown actions for next page selected
	by pageflow mechanism).

2009-04-07  Martin Leidig  <mleidig@schlund.de>

	Fixed method covariance problem: now we just skip all
	synthetic/bridge methods when introspecting a bean.

	Modified:
	* src/de/schlund/pfixcore/beans/BeanDescriptor.java
	* tests/junit/de/schlund/pfixcore/beans/BeanDescriptorTest.java

	Added:
	* tests/junit/de/schlund/pfixcore/oxm/CovariantBeanTest.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanA.java
	* tests/junit/de/schlund/pfixcore/oxm/bean/CovariantBeanB.java
