@@ -1,3 +1,10 @@
+2009-05-13  Martin Leidig  <mleidig@schlund.de>
+
+	Improved XSLT stylesheet compilation error handling: Remember
+	TransformerExceptions and add them as TransformerConfigurationException
+	cause to reflect the real problem and not just display the pretty vacant 
+	'Failed to compile stylesheet' message.
+
 2009-05-13  Andreas Kurth <andreas.kurth@1und1.de>
 
 	Made junit "fork" attribute configurable via property "test.junit.fork".
